--- a/.github/workflows/scheduled-signatures-test.yaml
+++ b/.github/workflows/scheduled-signatures-test.yaml
@@ -19,6 +19,15 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Restore Go modules from cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - name: Install Dependencies
         uses: ./.github/actions/build-dependencies
         with:
