chore: rename tracee-trainer to tracee-tester
Adds also manually dispatched GitHub Actions workflow
to publish the aquasec/tracee-tester:latest container
image to DockerHub.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,2 +1,3 @@
-docker-build-tracee-trainer:
-	docker build -t tracee-trainer:latest tests
+# TODO Delete this Makefile once we publish aquasec/tracee-tester:latest to DockerHub.
+docker-build-tracee-tester:
+	docker image build --tag aquasec/tracee-tester:latest tests/tracee-tester
