--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -165,9 +165,9 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           opa-version: ${{ env.OPA_VERSION }}
-      - name: Buld tracee trainer
+      - name: Buld tracee-tester image
         run: |
-          make -f tests/Makefile docker-build-tracee-trainer
+          make -f tests/Makefile docker-build-tracee-tester
       - name: Build tracee-nocore
         run: |
           make -f builder/Makefile.tracee-container build-alpine-tracee-nocore
@@ -178,6 +178,7 @@ jobs:
         run: |
           go test -v -run "TestTraceeSignatures" ./tests/tracee_test.go \
             -tracee-image-ref "tracee-nocore:latest" \
+            -tracee-tester-image-ref "aquasec/tracee-tester:latest" \
             -tracee-signatures "TRC-2"
 
   # smoke-test-core job is using TRC-2 (Anti-Debugging) signature and tracee
@@ -208,13 +209,14 @@ jobs:
       - name: Build tracee-core-btfhub
         run: |
           make -f builder/Makefile.tracee-container build-alpine-tracee-core-btfhub
-      - name: Buld tracee trainer
+      - name: Buld tracee-tester image
         run: |
-          make -f tests/Makefile docker-build-tracee-trainer
+          make -f tests/Makefile docker-build-tracee-tester
       - name: Run tests
         run: |
           go test -v -run "TestTraceeSignatures" ./tests/tracee_test.go \
             -tracee-image-ref "tracee-btfhub:latest" \
+            -tracee-tester-image-ref "aquasec/tracee-tester:latest" \
             -tracee-signatures "TRC-2"
 
 
