--- a/.github/workflows/scheduled-signatures-test.yaml
+++ b/.github/workflows/scheduled-signatures-test.yaml
@@ -24,9 +24,9 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           opa-version: ${{ env.OPA_VERSION }}
-      - name: Buld tracee trainer
+      - name: Buld tracee-tester image
         run: |
-          make -f tests/Makefile docker-build-tracee-trainer
+          make -f tests/Makefile docker-build-tracee-tester
       - name: Build tracee-nocore
         run: |
           make -f builder/Makefile.tracee-container build-alpine-tracee-nocore
@@ -36,4 +36,5 @@ jobs:
       - name: Run tests
         run: |
           go test -v -run "TestTraceeSignatures" ./tests/tracee_test.go \
-            -tracee-image-ref "tracee-nocore:latest"
+            -tracee-image-ref "tracee-nocore:latest" \
+            -tracee-tester-image-ref "aquasec/tracee-tester:latest"
