--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -173,6 +173,7 @@ jobs:
           make -f Makefile.one install-bpf-nocore
       - name: Run tests
         run: |
+          docker image pull aquasec/tracee-tester:latest
           go test -v -run "TestTraceeSignatures" ./tests/tracee_test.go \
             -tracee-image-ref "tracee-nocore:latest" \
             -tracee-tester-image-ref "aquasec/tracee-tester:latest" \
@@ -208,6 +209,7 @@ jobs:
           make -f builder/Makefile.tracee-container build-alpine-tracee-core-btfhub
       - name: Run tests
         run: |
+          docker image pull aquasec/tracee-tester:latest
           go test -v -run "TestTraceeSignatures" ./tests/tracee_test.go \
             -tracee-image-ref "tracee-btfhub:latest" \
             -tracee-tester-image-ref "aquasec/tracee-tester:latest" \
