builder: container images: slim and full
This commit is the result of a broader discussion regarding how we
should distribute tracee and how CO-RE and non CO-RE feature, and
wording, should be handled.

We, now, will have the following container images:

- tracee:latest
- tracee:full

And they are generated by:

- make -f builder/Makefile.tracee-container build-tracee
- make -f builder/Makefile.tracee-container build-tracee-full

And might be tested by:

- make -f builder/Makefile.tracee-container run-tracee
- make -f builder/Makefile.tracee-container run-tracee-full

  Obs: images need to be built before run targets are executed.

Both images can run:

- tracee-eBPF with CO-RE
- tracee-eBPF with CO-RE + BTFHub (tailored BTF files)
- tracee-eBPF non CO-RE (from /tmp/tracee non CO-RE eBPF obj)

So, one may built the non CO-RE object by using:

- make -f builder/Makefile.tracee-container run-tracee-full

and subsequent calls to the smaller image will work:

- make -f builder/Makefile.tracee-container run-tracee

  Obs: makefile automatically shares /tmp/tracee so this can be true.

The full image is different because:

- it contains tracee src code, tools and compilers
- it builds /tmp/tracee/xxx.bpf.o non CO-RE eBPF obj, if needed

  Obs: One can use the full image to generate needed non CO-RE obj and
       distribute it through different nodes, with same kernel, in order
       to run the smaller (slim) image on them.

--- a/.github/workflows/scheduled-signatures-test.yaml
+++ b/.github/workflows/scheduled-signatures-test.yaml
@@ -24,9 +24,9 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           opa-version: ${{ env.OPA_VERSION }}
-      - name: Build tracee-nocore
+      - name: Build tracee image (slim w/ BTFHUB)
         run: |
-          make -f builder/Makefile.tracee-container build-alpine-tracee-nocore
+          BTFHUB=1 make -f builder/Makefile.tracee-container build-tracee
       - name: Install BPF
         run: |
           make -f Makefile.one install-bpf-nocore
@@ -34,5 +34,5 @@ jobs:
         run: |
           docker image pull aquasec/tracee-tester:latest
           go test -v -run "TestTraceeSignatures" ./tests/tracee_test.go \
-            -tracee-image-ref "tracee-nocore:latest" \
+            -tracee-image-ref "tracee:latest" \
             -tracee-tester-image-ref "aquasec/tracee-tester:latest"
