--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -139,7 +139,6 @@ jobs:
           severity: "CRITICAL"
           exit-code: "1"
 
-
   # smoke-test-noncore job is using TRC-2 (Anti-Debugging) signature and tracee
   # non CO-RE container image to run a quick smoke test on each PR.
   #
@@ -165,9 +164,9 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           opa-version: ${{ env.OPA_VERSION }}
-      - name: Build tracee-nocore
+      - name: Build tracee image (full w/out BTFHUB)
         run: |
-          make -f builder/Makefile.tracee-container build-alpine-tracee-nocore
+          BTFHUB=0 make -f builder/Makefile.tracee-container build-tracee-full
       - name: Install BPF
         run: |
           make -f Makefile.one install-bpf-nocore
@@ -175,7 +174,7 @@ jobs:
         run: |
           docker image pull aquasec/tracee-tester:latest
           go test -v -run "TestTraceeSignatures" ./tests/tracee_test.go \
-            -tracee-image-ref "tracee-nocore:latest" \
+            -tracee-image-ref "tracee:full" \
             -tracee-tester-image-ref "aquasec/tracee-tester:latest" \
             -tracee-signatures "TRC-2"
 
@@ -204,17 +203,16 @@ jobs:
       - name: Built tracee BPF
         run: |
           make -f Makefile.one bpf-core
-      - name: Build tracee-core-btfhub
+      - name: Build tracee image (slim w/ BTFHUB)
         run: |
-          make -f builder/Makefile.tracee-container build-alpine-tracee-core-btfhub
+          BTFHUB=1 make -f builder/Makefile.tracee-container build-tracee
       - name: Run tests
         run: |
           docker image pull aquasec/tracee-tester:latest
           go test -v -run "TestTraceeSignatures" ./tests/tracee_test.go \
-            -tracee-image-ref "tracee-btfhub:latest" \
+            -tracee-image-ref "tracee:latest" \
             -tracee-tester-image-ref "aquasec/tracee-tester:latest" \
             -tracee-signatures "TRC-2"
-
 
   # deprecated-verify-tracee-ebpf and deprecated-verify-tracee-rules jobs are
   # supposed to be removed once we fully migrate to Makefile.one and get rid of
