--- a/builder/Makefile.tracee-container
+++ b/builder/Makefile.tracee-container
@@ -37,32 +37,27 @@ CMD_DOCKER ?= docker
 .PHONY: help
 help:
 	@echo ""
-	@echo "To generate tracee container(s):"
+	@echo "To generate tracee containers:"
 	@echo ""
-	@echo "    $$ make -f builder/Makefile.tracee-container build-alpine-tracee-core"
-	@echo "    $$ make -f builder/Makefile.tracee-container build-alpine-tracee-core-btfhub"
-	@echo "    $$ make -f builder/Makefile.tracee-container build-alpine-tracee-nocore"
+	@echo "    $$ make -f builder/Makefile.tracee-container build-tracee"
+	@echo "    $$ make -f builder/Makefile.tracee-container build-tracee-full"
 	@echo ""
-	@echo "To execute tracee container(s):"
+	@echo "To execute tracee containers:"
 	@echo ""
-	@echo "    $$ make -f builder/Makefile.tracee-container run-alpine-tracee-core"
-	@echo "    $$ make -f builder/Makefile.tracee-container run-alpine-tracee-core-btfhub"
-	@echo "    $$ make -f builder/Makefile.tracee-container run-alpine-tracee-nocore"
+	@echo "    $$ make -f builder/Makefile.tracee-container run-tracee"
+	@echo "    $$ make -f builder/Makefile.tracee-container run-tracee-ebpf"
 	@echo ""
-	@echo "To execute tracee-ebpf container(s):"
-	@echo ""
-	@echo "    $$ make -f builder/Makefile.tracee-container run-alpine-tracee-ebpf-core"
-	@echo "    $$ make -f builder/Makefile.tracee-container run-alpine-tracee-ebpf-core-btfhub"
-	@echo "    $$ make -f builder/Makefile.tracee-container run-alpine-tracee-ebpf-nocore"
+	@echo "    $$ make -f builder/Makefile.tracee-container run-tracee-full"
+	@echo "    $$ make -f builder/Makefile.tracee-container run-tracee-ebpf-full"
 	@echo ""
 	@echo "Note: You may provide \"run\" arguments using the ARG variable."
 	@echo ""
 	@echo "Example:"
 	@echo ""
-	@echo "    $$ make -f builder/Makefile.tracee-container build-alpine-tracee-core-btfhub"
+	@echo "    $$ make -f builder/Makefile.tracee-container build-tracee"
 	@echo ""
-	@echo "    $$ make -f builder/Makefile.tracee-container run-alpine-tracee-ebpf-core \ "
-	@echo "          ARG=\"--debug -trace event!='sched*'\" "
+	@echo "    $$ make -f builder/Makefile.tracee-container run-tracee-ebpf-full \ "
+	@echo "          ARG=\"--debug -trace comm=bash --trace follow'\" "
 	@echo ""
 
 #
@@ -78,137 +73,110 @@ help:
 	fi
 
 #
-# create tracee (tracee-ebpf + tracee-rules + rules)
+# create tracee & tracee-full
 #
 
-ALPINE_TRACEE_CORE_CONTNAME = tracee
-ALPINE_TRACEE_CORE_DOCKERFILE = builder/Dockerfile.alpine-tracee-container
+# BTFHUB is not set by default, but both of the official images, slim and full,
+# should be built with BTFHUB=1. This will maximize chances of end user using
+# the slim image AND also allow end user to pick the full image for all use
+# cases (if that is what one wants).
+ifeq ($(BTFHUB),)
+BTFHUB=0
+endif
 
-.PHONY: build-alpine-tracee-core
-build-alpine-tracee-core: \
+# TODO: change BTFHUB=1 for the pull request
+
+TRACEE_CONT_NAME = tracee:latest
+TRACEE_FULL_CONT_NAME = tracee:full
+
+TRACEE_CONT_DOCKERFILE = builder/Dockerfile.alpine-tracee-container
+
+.PHONY: build-tracee
+build-tracee: \
 	| .check_$(CMD_DOCKER) \
 	.check_tree
 #
 	$(CMD_DOCKER) build \
-		-f $(ALPINE_TRACEE_CORE_DOCKERFILE) \
-		-t $(ALPINE_TRACEE_CORE_CONTNAME):latest \
-		--build-arg=BTFHUB=0 \
+		-f $(TRACEE_CONT_DOCKERFILE) \
+		-t $(TRACEE_CONT_NAME) \
+		--build-arg=BTFHUB=$(BTFHUB) \
 		--build-arg=FLAVOR=tracee-core \
 		.
 
-ALPINE_TRACEE_CORE_BTFHUB_CONTNAME = tracee-btfhub
-ALPINE_TRACEE_CORE_DOCKERFILE = builder/Dockerfile.alpine-tracee-container
-
-.PHONY: build-alpine-tracee-core-btfhub
-build-alpine-tracee-core-btfhub: \
+.PHONY: build-tracee-full
+build-tracee-full: \
 	| .check_$(CMD_DOCKER) \
 	.check_tree
 #
 	$(CMD_DOCKER) build \
-		-f $(ALPINE_TRACEE_CORE_DOCKERFILE) \
-		-t $(ALPINE_TRACEE_CORE_BTFHUB_CONTNAME):latest \
-		--build-arg=BTFHUB=1 \
-		--build-arg=FLAVOR=tracee-core \
-		.
-
-ALPINE_TRACEE_NOCORE_CONTNAME = tracee-nocore
-ALPINE_TRACEE_NOCORE_DOCKERFILE = builder/Dockerfile.alpine-tracee-container
-
-.PHONY: build-alpine-tracee-nocore
-build-alpine-tracee-nocore: \
-	| .check_$(CMD_DOCKER) \
-	.check_tree
-#
-	$(CMD_DOCKER) build \
-		-f $(ALPINE_TRACEE_NOCORE_DOCKERFILE) \
-		-t $(ALPINE_TRACEE_NOCORE_CONTNAME):latest \
-		--build-arg=BTFHUB=0 \
+		-f $(TRACEE_CONT_DOCKERFILE) \
+		-t $(TRACEE_FULL_CONT_NAME) \
+		--build-arg=BTFHUB=$(BTFHUB) \
 		--build-arg=FLAVOR=tracee-nocore \
 		.
 
 #
-# run tracee (tracee-ebpf + tracee-rules)
+# run tracee and tracee-full
 #
 
 DOCKER_RUN_ARGS = run --rm --pid=host --privileged \
 		-v /etc/os-release:/etc/os-release-host:ro \
-		-v $(PWD):/tracee \
-		-v /lib/modules:/lib/modules:ro \
-		-v /usr/src:/usr/src:ro \
 		-v /sys/kernel/security:/sys/kernel/security:ro \
-		-e LIBBPFGO_OSRELEASE_FILE=/etc/os-release-host
+		-e LIBBPFGO_OSRELEASE_FILE=/etc/os-release-host \
+		-v /tmp/tracee:/tmp/tracee:rw
 
-.PHONY: run-alpine-tracee-core
-run-alpine-tracee-core: \
+DOCKER_RUN_ARGS_FULL = $(DOCKER_RUN_ARGS) \
+		-v /lib/modules:/lib/modules:ro \
+		-v /usr/src:/usr/src:ro
+
+.PHONY: run-tracee
+run-tracee: \
 	| .check_$(CMD_DOCKER) \
 	.check_tree
 #
 	$(CMD_DOCKER) \
 		$(DOCKER_RUN_ARGS) \
 		-e TRACEE_EBPF_ONLY=0 \
-		--rm -it $(ALPINE_TRACEE_CORE_CONTNAME) \
+		--rm -it $(TRACEE_CONT_NAME) \
 		$(ARG)
 
-.PHONY: run-alpine-tracee-core-btfhub
-run-alpine-tracee-core-btfhub: \
+.PHONY: run-tracee-full
+run-tracee-full: \
 	| .check_$(CMD_DOCKER) \
 	.check_tree
 #
 	$(CMD_DOCKER) \
-		$(DOCKER_RUN_ARGS) \
-		-e TRACEE_EBPF_ONLY=0 \
-		--rm -it $(ALPINE_TRACEE_CORE_BTFHUB_CONTNAME) \
-		$(ARG)
-
-.PHONY: run-alpine-tracee-nocore
-run-alpine-tracee-nocore: \
-	| .check_$(CMD_DOCKER) \
-	.check_tree
-#
-	$(CMD_DOCKER) \
-		$(DOCKER_RUN_ARGS) \
+		$(DOCKER_RUN_ARGS_FULL) \
 		-e TRACEE_EBPF_ONLY=0 \
 		-e FORCE_CORE=0 \
-		--rm -it $(ALPINE_TRACEE_NOCORE_CONTNAME) \
+		--rm -it $(TRACEE_FULL_CONT_NAME) \
 		$(ARG)
 
 #
-# run tracee-ebpf only
+# run tracee-ebpf or tracee-ebpf-full
 #
 
-.PHONY: run-alpine-tracee-ebpf-core
-run-alpine-tracee-ebpf-core: \
+.PHONY: run-tracee-ebpf
+run-tracee-ebpf: \
 	| .check_$(CMD_DOCKER) \
 	.check_tree
 #
 	$(CMD_DOCKER) \
 		$(DOCKER_RUN_ARGS) \
 		-e TRACEE_EBPF_ONLY=1 \
-		--rm -it $(ALPINE_TRACEE_CORE_CONTNAME) \
+		--rm -it $(TRACEE_CONT_NAME) \
 		$(ARG)
 
-.PHONY: run-alpine-tracee-ebpf-core-btfhub
-run-alpine-tracee-ebpf-core-btfhub: \
+.PHONY: run-tracee-ebpf-full
+run-tracee-ebpf-full: \
 	| .check_$(CMD_DOCKER) \
 	.check_tree
 #
 	$(CMD_DOCKER) \
-		$(DOCKER_RUN_ARGS) \
-		-e TRACEE_EBPF_ONLY=1 \
-		--rm -it $(ALPINE_TRACEE_CORE_BTFHUB_CONTNAME) \
-		$(ARG)
-
-
-.PHONY: run-alpine-tracee-ebpf-nocore
-run-alpine-tracee-ebpf-nocore: \
-	| .check_$(CMD_DOCKER) \
-	.check_tree
-#
-	$(CMD_DOCKER) \
-		$(DOCKER_RUN_ARGS) \
+		$(DOCKER_RUN_ARGS_FULL) \
 		-e TRACEE_EBPF_ONLY=1 \
 		-e FORCE_CORE=0 \
-		--rm -it $(ALPINE_TRACEE_NOCORE_CONTNAME) \
+		--rm -it $(TRACEE_FULL_CONT_NAME) \
 		$(ARG)
 
 #
