Add static builds
Signed-off-by: grantseltzer <grantseltzer@gmail.com>

--- a/builder/Makefile.release
+++ b/builder/Makefile.release
@@ -158,9 +158,9 @@ snapshot: \
 #
 	# build binaries (tracee-ebpf (CO-RE + BTFHUB), tracee-rules, rules)
 	$(MAKE) -f builder/Makefile.tracee-make ubuntu-prepare ARG="all"
-	BTFHUB=1 $(MAKE) -f builder/Makefile.tracee-make ubuntu-make ARG="all"
+	BTFHUB=1 STATIC=1 $(MAKE) -f builder/Makefile.tracee-make ubuntu-make ARG="all"
 	# create the tar ball and checksum files
-	$(CMD_TAR) -czf $(OUT_ARCHIVE) $(RELEASE_FILES)
+	$(CMD_TAR) --exclude="*.so" -czf $(OUT_ARCHIVE) $(RELEASE_FILES)
 	$(CMD_CHECKSUM) $(OUT_ARCHIVE) > $(OUT_CHECKSUMS)
 	# build official slim container image (CO-RE + BTFHUB)
 	BTFHUB=1 $(MAKE) -f builder/Makefile.tracee-container build-tracee
