--- a/.github/workflows/scheduled-signatures-test.yaml
+++ b/.github/workflows/scheduled-signatures-test.yaml
@@ -29,7 +29,7 @@ jobs:
           BTFHUB=1 make -f builder/Makefile.tracee-container build-tracee
       - name: Install BPF
         run: |
-          make -f Makefile.one install-bpf-nocore
+          make install-bpf-nocore
       - name: Run tests
         run: |
           docker image pull aquasec/tracee-tester:latest
