--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,8 @@ nav:
     - Capturing Artifacts: tracee-ebpf/capture.md
     - Overriding OS needed files: tracee-ebpf/override-os-needed-files
   - FAQ: faq.md
-  - Further Reading: further-reading.md
+  - Reference:
+    - Further Reading: further-reading.md
 
 theme:
     name: material
