chore(make): re-create test targets
Instead of grouping tests by tracee-ebpf and tracee-rules
we will group them by scope, i.e. unit, integration, and
end-to-end tests.

               .
              / \\
             /   \ \
            / E2E \' \
           / TESTS \'' \
          /---------\ ' '\
         /           \''   \
        / INTEGRATION \ ' '  \
       /     TESTS     \   ''  \
      /-----------------\' ' ' ' \
     /                   \' ' '  ' \
    /                     \' '   ' ' \
   /      UNIT TESTS       \  '   ' /
  /                         \   ' /
 /                           \'  /
/_____________________________\/

NB There are still some tests that do not fall into category
of unit, integration, nor end-to-end tests, but fixing them
is out of scope of this patch.

Resolves: #1522

Signed-off-by: Daniel Pacak <pacak.daniel@gmail.com>

--- a/.github/workflows/scheduled-signatures-test.yaml
+++ b/.github/workflows/scheduled-signatures-test.yaml
@@ -33,6 +33,6 @@ jobs:
       - name: Run tests
         run: |
           docker image pull aquasec/tracee-tester:latest
-          go test -v -run "TestTraceeSignatures" ./tests/tracee_test.go \
+          go test -v -run "TestTraceeSignatures" ./tests/e2e/e2e_test.go \
             -tracee-image-ref "tracee:latest" \
             -tracee-tester-image-ref "aquasec/tracee-tester:latest"
