fix: compile tracee in Docker container without interactive mode
Resolves: #1538

Signed-off-by: Daniel Pacak <pacak.daniel@gmail.com>

--- a/builder/Makefile.tracee-make
+++ b/builder/Makefile.tracee-make
@@ -176,7 +176,7 @@ alpine-make: \
 ifneq ($(ARG),)
 	$(CMD_DOCKER) \
 		$(DOCKER_RUN_ARGS) \
-		-it $(ALPINE_MAKE_CONTNAME) \
+		$(ALPINE_MAKE_CONTNAME) \
 		$(MAKE) $(ARG)
 endif
 
@@ -188,7 +188,7 @@ ubuntu-make: \
 ifneq ($(ARG),)
 	$(CMD_DOCKER) \
 		$(DOCKER_RUN_ARGS) \
-		-it $(UBUNTU_MAKE_CONTNAME) \
+		$(UBUNTU_MAKE_CONTNAME) \
 		$(MAKE) $(ARG)
 endif
 
