--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,8 @@ nav:
     - Trace Options: tracee-ebpf/trace-options.md
     - Capturing Artifacts: tracee-ebpf/capture.md
     - Overriding OS needed files: tracee-ebpf/override-os-needed-files.md
+  - Tutorials:
+      - Setup Development Machine with Vagrant: tutorials/setup-development-machine-with-vagrant
 
 theme:
     name: material
