docs(tutorial): update installation for Postee in Vagrant tutorial
We provide deployment descriptors to install Tracee with Postee on
Kubernetes cluster. However, there are additional steps to install
Postee on MicroK8s cluster and follow along the tutorial, which are
added in this patch.

Signed-off-by: Daniel Pacak <pacak.daniel@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,7 +31,7 @@ nav:
     - Capturing Artifacts: tracee-ebpf/capture.md
     - Overriding OS needed files: tracee-ebpf/override-os-needed-files.md
   - Tutorials:
-      - Setup Development Machine with Vagrant: tutorials/setup-development-machine-with-vagrant
+      - Setup Development Machine with Vagrant: tutorials/setup-development-machine-with-vagrant.md
       - Deploy Tracee Grafana Dashboard: tutorials/deploy-grafana-dashboard.md
 
 theme:
