mkdocs: add grafana deployment tutorial to index

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
     - Overriding OS needed files: tracee-ebpf/override-os-needed-files.md
   - Tutorials:
       - Setup Development Machine with Vagrant: tutorials/setup-development-machine-with-vagrant
+      - Deploy Tracee Grafana Dashboard: tutorials/deploy-grafana-dashboard.md
 
 theme:
     name: material
