Change logic of release make target
Now publishing is defualt, and snapshot is opt-in with SNAPSHOT=1

In the case of just a snapshot, the latest git SHA will be used,
in the case of publishing, the latest git tag will be used.

Signed-off-by: grantseltzer <grantseltzer@gmail.com>

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -110,7 +110,7 @@ jobs:
           opa-version: ${{ env.OPA_VERSION }}
       - name: Build
         run: |
-          make -f builder/Makefile.release snapshot
+          make -f builder/Makefile.release SNAPSHOT=1
       - name: Scan Docker Image for Vulnerabilities
         uses: aquasecurity/trivy-action@master
         with:
