--- a/.github/workflows/test-signatures.yaml
+++ b/.github/workflows/test-signatures.yaml
@@ -1,10 +1,11 @@
+---
 # Test signatures on CRON schedule or on demand.
-name: Scheduled Signatures Test
+name: Test Signatures
 
 on:
   workflow_dispatch: { }
   schedule:
-    - cron: "0 0 * * *"  # every night
+    - cron: "0 0 * * *"
 
 env:
   GO_VERSION: "1.17"
