--- a/.github/workflows/release-snapshot.yaml
+++ b/.github/workflows/release-snapshot.yaml
@@ -1,7 +1,8 @@
 ---
 # Release snapshot on CRON schedule or on demand. This workflow ensures that
 # the main branch is ready for release and that all build configuration files
-# are valid. Also scans tracee container images for vulnerabilities.
+# are valid. Also scans tracee container images for vulnerabilities, and
+# publishes to DockerHub as aquasec/tracee:dev and aquasec/tracee:full-dev.
 name: Release Snapshot
 
 on:
@@ -41,3 +42,14 @@ jobs:
           image-ref: "tracee:full"
           severity: "CRITICAL"
           exit-code: "1"
+      - name: Login to docker.io registry
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Publish to docker.io registry
+        run: |
+          docker image tag tracee:latest aquasec/tracee:dev
+          docker image tag tracee:full aquasec/tracee:full-dev
+          docker image push aquasec/tracee:dev
+          docker image push aquasec/tracee:full-dev
