--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -195,3 +195,33 @@ jobs:
             -e kern_version=${{ matrix.kernel }} \
             -e test_name=${{ matrix.signature }} \
             -t rafaeldtinoco/tracee-test-kernels:latest
+  NON-CO-RE:
+    runs-on: ubuntu-20.04
+    needs:
+      - smoke-test-noncore
+    strategy:
+      fail-fast: false
+      matrix:
+        signature:
+          - "TRC-2"
+        kernel:
+          - "4.19.238-stable"
+          - "5.4.189-stable"
+          - "5.8.18-ubuntu"
+          - "5.10.111-stable"
+          - "5.13.19-ubuntu"
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: "Pull test container image"
+        run: |
+          docker image pull rafaeldtinoco/tracee-test-noncore:latest
+      - name: "Run tests"
+        run: |
+          docker run --rm --privileged -v $(pwd):/tracee:rw \
+            -e kvm_accel="tcg" \
+            -e kern_version=${{ matrix.kernel }} \
+            -e test_name=${{ matrix.signature }} \
+            -t rafaeldtinoco/tracee-test-noncore:latest
