workflows: add amzn2 5.10 kernel to tests

--- a/.github/workflows/test-core-daily.yaml
+++ b/.github/workflows/test-core-daily.yaml
@@ -21,6 +21,7 @@ jobs:
           - "5.4.188-amzn2"
           - "5.4.189-stable"
           - "5.8.18-ubuntu"
+          - "5.10.109-amzn2"
           - "5.10.111-stable"
           - "5.11.22-ubuntu"
           - "5.11.22-fedora32"
