--- a/.github/workflows/test-noncore-daily.yaml
+++ b/.github/workflows/test-noncore-daily.yaml
@@ -1,7 +1,7 @@
 #
 # Daily Test: TRC-2 with selected kernels.
 #
-name: CO-RE (DAILY)
+name: NON CO-RE (DAILY)
 on:
   workflow_dispatch: {}
   schedule:
@@ -18,6 +18,7 @@ jobs:
         kernel:
           - "4.19.238-stable"
           - "5.4.166-ubuntu+"
+          - "5.4.188-amzn2"
           - "5.4.189-stable"
           - "5.8.18-ubuntu"
           - "5.10.111-stable"
@@ -36,11 +37,12 @@ jobs:
           submodules: true
       - name: "Pull test container image"
         run: |
-          docker image pull rafaeldtinoco/tracee-test-noncore:latest
+          docker image pull rafaeldtinoco/tracee-test-kernels:latest
       - name: "Run tests"
         run: |
           docker run --rm --privileged -v $(pwd):/tracee:rw \
             -e kvm_accel="tcg" \
             -e kern_version=${{ matrix.kernel }} \
             -e test_name=${{ matrix.signature }} \
-            -t rafaeldtinoco/tracee-test-noncore:latest
+            -e is_noncore=1 \
+            -t rafaeldtinoco/tracee-test-kernels:latest
